@@ -1,3 +1,10 @@
+2018-02-23  Greg Wolfe  <gregory.wolfe@kodakalaris.com>
+
+	* magick/render.c (DrawPolygonPrimitive): When filling or
+	stroking a polygon using a pattern, the fill (or stroke)
+	and group/object opacity values were not being applied to
+	the pattern (fixed).
+
 2018-02-23  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* coders/bmp.c (ReadBMPImage): Fix SeekBlob() return value checks.
